# MLOps

./: Dockerfile  README.md
bindings/: CMakeLists.txt  README.md  pyproject.toml
bindings/src/: main.cpp
onnx/: Dockerfile  README.md  convert.py  flops.py  highload_test.sh  sanity_check.py
onnx/model_repository/rubert_ensemble/: config.pbtxt
onnx/model_repository/rubert_onnx/: config.pbtxt
onnx/model_repository/rubert_preprocess/: config.pbtxt  load_tokenizer.py
onnx/model_repository/rubert_preprocess/1/: model.py
python/: gauss.py
